added html files

--- a/Home/home.html
+++ b/Home/home.html
@@ -6,9 +6,10 @@
 
 <script src="homeJS.js" defer></script>
 <link rel="stylesheet" type="text/css" href="homeStyles.css">
-<link rel="icon" href="faviconPy.ico">
+<link rel="icon" href="../faviconPy.ico">
 </head>
 <body>
 <header>
     <h1>Coding for the Web</h1>
 </header>
+</body>
