Added home page headings, menu, and page switches

--- a/Home/home.html
+++ b/Home/home.html
@@ -1,15 +1,37 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Coding for the Web</title>
-<meta name ="viewport" content="width=device-width, initial-scale=1">
+    <title>Coding for the Web</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    
+    <script src="homeJS.js" defer></script>
+    <link rel="stylesheet" type="text/css" href="homeStyles.css">
+    <link rel="icon" href="../faviconPy.ico">
+    </head>
+    <body>
+    <header>
+        <h1>Coding for the Web</h1>
+    </header>
+    <div class="wrapper">
+      <aside class="side-nav">
+        <nav id="nav">
+            <a href="../Basics/basics.html">Basics</a>
+            <a href="../Resources/resources.html">Resources</a>
+            <a href="../Uses/uses.html">Uses</a>
+            <a href="../Syntax/syntax.html">Syntax</a>
+            <a href="../History/history.html">History</a>
+            <a href="../About/about.html">About</a>
+        </nav>
+      </aside>
+      <main>
+        <div class="wrapper_inner">
+            <h2>Introduction to Python:</h2>
+            <h3>Ready to start your coding journey?</h3>
+            <p>
+                On this site
+            </p>
+         </div>
+       </main>
+     </div>
 
-<script src="homeJS.js" defer></script>
-<link rel="stylesheet" type="text/css" href="homeStyles.css">
-<link rel="icon" href="../faviconPy.ico">
-</head>
-<body>
-<header>
-    <h1>Coding for the Web</h1>
-</header>
-</body>
+    </body>
