--- a/index.html
+++ b/index.html
@@ -28,10 +28,26 @@
             <h2>Introduction to Python:</h2>
             <h3>Ready to start your coding journey?</h3>
             <p>
-                On this site
+                On this site you will learn an overview of the basic concepts of programming, as well as an introduction to the syntax needed to write Python code. A brief history and additional resources are also included to ensure you get the most out of this experience and are motivated to find out more!
             </p>
+            <p>Click <a href="../Basics/basics.html">here</a> to find out more!</p>
          </div>
+
        </main>
      </div>
-
+    <footer>
+      
+      <div class="footer-links">
+        <a href="../index.html">Home</a>
+        <a href="../Basics/basics.html">Basics</a>
+        <a href="../Resources/resources.html">Resources</a>
+        <a href="../Uses/uses.html">Uses</a>
+        <a href="../Syntax/syntax.html">Syntax</a>
+        <a href="../History/history.html">History</a>
+        <a href="../About/about.html">About</a>
+        <a href="../Basics/basics.html">Terms and Conditions</a>
+        <a href="../Basics/basics.html">Privacy Policy</a>
+      </div> 
+      <p id="footer-text">Copyright Information 2025</p>
+    </footer>
     </body>
