--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@
         <a href="../Basics/basics.html">Terms and Conditions</a>
         <a href="../Basics/basics.html">Privacy Policy</a>
       </div> 
-      <p id="footer-text">Copyright Information 2025</p>
+      <div id="copyright">
+        <p>Copyright Information 2025</p>
+      </div>
+      
+      
     </footer>
+    <div id="footer-logo">
+      <img id="logo"  src="../logo.png" alt="logo">
+    </div>
     </body>
