--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     <div class="wrapper">
       <aside class="side-nav">
         <nav id="nav">
+            <a href="../index.html">Home</a>
             <a href="../Basics/basics.html">Basics</a>
             <a href="../Resources/resources.html">Resources</a>
             <a href="../Uses/uses.html">Uses</a>
