Added contact page

--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
         <button id="documentation" onclick="documentionVisit()">View documentation</button>
         <a id="responsiveDoc" href="https://docs.python.org/3/" target="_blank">View Documentation</a>
         
+        <button id="contact" onclick="contactPage()">Contact Us</button>
 
                   
 
