--- a/Contact/contact.html
+++ b/Contact/contact.html
@@ -76,32 +76,45 @@
   </nav>
   
 
-
-  
-
-
-<footer>
-    <div class="footer-links">
+  <footer>
+    <div class="footer-links left-links">
       <a href="../index.html">Home</a>
       <a href="../Basics/basics.html">Basics</a>
       <a href="../Resources/resources.html">Resources</a>
       <a href="../Uses/uses.html">Uses</a>
+    </div>
+    <div id="footer-logo">
+      <img src="../logo.png" alt="logo">
+      <img id="header-logo-EKC" src="../EKClogo2.jpg" alt="logo">
+      
+    </div>
+
+    <div class="footer-links right-links">
       <a href="../Syntax/syntax.html">Syntax</a>
       <a href="../History/history.html">History</a>
       <a href="../About/about.html">About</a>
       <a href="../Basics/basics.html">Terms and Conditions</a>
-      <a href="../Basics/basics.html">Privacy Policy</a>
+    </div>
     </div> 
-
+    
     <div id="copyright">
-      <p>Copyright Information 2025</p>
+      <p>Copyright Information 2025
+        <br>
+        <br>
+        This content is produced in participation with EKC Group
+      </p>
     </div>
 
-    <div id="footer-logo">
-      <img src="../logo.png" alt="logo">
-    </div>
+
   </footer>
+
+
+
+  
+
+
 </body>
+</html>
 
 
 
