changed uses t0o quiz

--- a/History/history.html
+++ b/History/history.html
@@ -54,7 +54,7 @@
             <a href="../index.html">Home</a>
             <a href="../Basics/basics.html">Basics</a>
             <a href="../Resources/resources.html">Resources</a>
-            <a href="../Uses/uses.html">Uses</a>
+            <a href="../Uses/uses.html">Quiz</a>
             <a href="../Syntax/syntax.html">Syntax</a>
             <a href="../History/history.html">History</a>
             <a href="../About/about.html">About</a>
