--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <a href="../index.html">Home</a>
         <a href="../Basics/basics.html">Basics</a>
         <a href="../Resources/resources.html">Resources</a>
-        <a href="../Uses/uses.html">Uses</a>
+        <a href="../Uses/uses.html">Quiz</a>
       </div>
       <div id="footer-logo">
         <img src="../logo.png" alt="logo">
