--- a/Resources/resources.html
+++ b/Resources/resources.html
@@ -33,7 +33,7 @@
         <li><a href="../index.html">Home</a></li>
         <li><a href="../Basics/basics.html">Basics</a></li>
         <li><a href="../Resources/resources.html">Resources</a></li>
-        <li><a href="../Uses/uses.html">Uses</a></li>
+        <li><a href="../Uses/uses.html">Quiz</a></li>
         <li><a href="../Syntax/syntax.html">Syntax</a></li>
         <li><a href="../History/history.html">History</a></li>
         <li><a href="../About/about.html">About</a></li>
@@ -50,7 +50,7 @@
             <a href="../index.html">Home</a>
             <a href="../Basics/basics.html">Basics</a>
             <a href="../Resources/resources.html">Resources</a>
-            <a href="../Uses/uses.html">Uses</a>
+            <a href="../Uses/uses.html">Quiz</a>
             <a href="../Syntax/syntax.html">Syntax</a>
             <a href="../History/history.html">History</a>
             <a href="../About/about.html">About</a>
@@ -91,7 +91,7 @@
                   <a href="../index.html">Home</a>
                   <a href="../Basics/basics.html">Basics</a>
                   <a href="../Resources/resources.html">Resources</a>
-                  <a href="../Uses/uses.html">Uses</a>
+                  <a href="../Uses/uses.html">Quiz</a>
                 </div>
                 <div id="footer-logo">
                   <img src="../logo.png" alt="logo">
