added history pages, changed some styling

--- a/About/about.html
+++ b/About/about.html
@@ -62,10 +62,23 @@
       </aside>
       <main>
         <div class="wrapper_inner">
-            
+            <h2>About Coding for the Web</h2>
+            <h3>A site created for Canterbury College students learning a programming language</h3>
             <p>
                 This site is created for the purpose of teaching College students the basics of a programming; in this case, Python. 
             </p>
+            <p>
+              The site includes a brief overview of the main concepts of program flow and the key paradigms you will interact with whilst beginning to learn a programming language.
+            </p>
+            <p>
+              It also contains useful links to resources students will find useful when troubleshooting and testing their code. It will also bring them to a higher standard than this website is capable of.
+            </p>
+            <p>
+              There is a built in quiz for learners to test their knowledge, as well as a breif history of Python and the key syntax they will need when writing programs.
+            </p>
+            <br>
+            <p>Have any queries, suggestions, or complaints?</p>
+            <button id="contact" onclick="contactPage()">Contact Us</button>
             
          </div>
 
