--- a/History/history.html
+++ b/History/history.html
@@ -62,13 +62,42 @@
       </aside>
       <main>
         <div class="wrapper_inner">
-            <h2>Introduction to Python:</h2>
-            <h3>Ready to start your coding journey?</h3>
+            <h2>History of Python</h2>
+            <h3>You've learnt the basics of Python- but where did this useful language originate?</h3>
             <p>
-                On this site you will learn an overview of the basic concepts of programming, as well as an introduction to the syntax needed to write Python code. A brief history and additional resources are also included to ensure you get the most out of this experience and are motivated to find out more!
+              Python is a high level, general purpose programming language that focuses on readability of code and ease of use.
+              It supports multiple paradigms, supporting it in becoming one of the most popular programming languages in the world.
             </p>
-            <p>Click <a href="../Basics/basics.html">here</a> to find out more!</p>
-         </div>
+            <p>
+              Python was first created in 1980, and was started to become implemented in 1989 by Guido van Rossum, in the Netherlands.
+              Python was named after the show Monty Python's Flying Circus, which was a show that van Rossum enjoyed.
+            </p>
+            <p>
+              Python 2.0 was released in 2000, and introduced many new features, including list comprehensions and garbage collection.
+              Python 2.7 was released in 2000, and was the last version of Python 2, with support ending in January 1st, 2020.
+            </p>
+            <p>  
+              
+              Python 3.0 was released in 2008, and was a major revision of the language, with many features being removed or changed.
+              Python 3.0 was not backwards compatible with Python 2, which caused a lot of controversy in the programming community.
+              It introduced many new features, including a new syntax for print statements, and a new way of handling strings and bytes.
+            </p>
+            <p>
+              As of writing, Python 3.13.2 is the latest version of Python, and was released on October 7th, 2024.
+            </p>
+            <p>
+              Python continues to be a widely used langauge, being taught in schools and colleges around the world, due to its simplicity and versatility.
+            </p>
+          </div>
+
+        <br>
+        <div class="wrapper_inner">
+          <h4>References</h4>
+          <ul>
+            <li><a href="https://learnbyexample.github.io/100_page_python_intro/introduction.html#:~:text=Python%20is%20a%20high%2Dlevel,%2Dchecked%20and%20garbage%2Dcollected.">learnbyexample</a></li>
+            <li><a href="https://en.wikipedia.org/wiki/History_of_Python">History of Python (Wikipedia)</a></li>
+
+        </div>
 
        
 
