added one more contact form query

--- a/Contact/contact.html
+++ b/Contact/contact.html
@@ -35,6 +35,12 @@
                 <tr>
                     <td>Name:</td><td><input type="text"></td>
                 </tr>
+                
+
+                <tr>
+                  <td>Are you a student?:</td><td><input type="checkbox"></td>
+                </tr>
+             
                 <tr>
                     <td>Email:</td><td><input type="text"></td>
                 </tr>
