changed some stytling

--- a/Resources/resources.html
+++ b/Resources/resources.html
@@ -103,7 +103,7 @@
                   <a href="../Syntax/syntax.html">Syntax</a>
                   <a href="../History/history.html">History</a>
                   <a href="../About/about.html">About</a>
-                  <a href="../Basics/basics.html">Terms and Conditions</a>
+                  <a href="../T&Cs/terms.html">Terms and Conditions</a>
                 </div>
                 </div> 
                 
