--- a/Syntax/syntax.html
+++ b/Syntax/syntax.html
@@ -61,6 +61,7 @@
         </nav>
             </aside>
             <main>
+              <h2>Syntax</h2>
               <p id="introText">Below is a list of common syntax you will need in Python when writing programs. It is reccomended to learn these so you can write code effciently and intuitively in Python.</p>
         <div class="wrapper_inner_container">
           <div class="wrapper_inner">
@@ -122,7 +123,7 @@
         <a href="../Syntax/syntax.html">Syntax</a>
         <a href="../History/history.html">History</a>
         <a href="../About/about.html">About</a>
-        <a href="../Basics/basics.html">Terms and Conditions</a>
+        <a href="../T&Cs/terms.html">Terms and Conditions</a>
       </div>
       </div> 
       
