--- a/History/history.html
+++ b/History/history.html
@@ -94,8 +94,8 @@
         <div class="wrapper_inner">
           <h4>References</h4>
           <ul>
-            <li><a href="https://learnbyexample.github.io/100_page_python_intro/introduction.html#:~:text=Python%20is%20a%20high%2Dlevel,%2Dchecked%20and%20garbage%2Dcollected.">learnbyexample</a></li>
-            <li><a href="https://en.wikipedia.org/wiki/History_of_Python">History of Python (Wikipedia)</a></li>
+            <li><a href="https://learnbyexample.github.io/100_page_python_intro/introduction.html#:~:text=Python%20is%20a%20high%2Dlevel,%2Dchecked%20and%20garbage%2Dcollected." target="_blank">learnbyexample</a></li>
+            <li><a href="https://en.wikipedia.org/wiki/History_of_Python" target="_blank">History of Python (Wikipedia)</a></li>
 
         </div>
 
