added syntax content

--- a/Syntax/syntax.html
+++ b/Syntax/syntax.html
@@ -65,17 +65,22 @@
               <p id="introText">Below is a list of common syntax you will need in Python when writing programs. It is reccomended to learn these so you can write code effciently and intuitively in Python.</p>
         <div class="wrapper_inner_container">
           <div class="wrapper_inner">
-              print
+              <p>Syntax: print("Hello World!")</p>
+              <p>Definition: This syntax shows how you print text to the environment  </p>
           </div>
           <br>
 
           <div class="wrapper_inner">
-              if else
+            <p>Syntax: </p>
+            <img src="../Syntax/ifelse.png" alt="ifelse statement example">
+            <p>Definition: This is a selection statement that braches depending on a condition. It is very commonly used in program logic and which will be very useful in the future.</p>
           </div>
           <br>
 
           <div class="wrapper_inner">
-              function
+              <p>Syntax:</p>
+              <img src="../Syntax/function.png" alt="function example">
+              <p>Definition: A function's purpose is to eliminate repeating code, making your program's more effcient. Paramaters are placeholder values that you then pass real data to which can be used within the function- e.g. validation checks, caluclations, and concatenation.</p>
           </div>
           <br>
 
