visibility of feedbakc and video fix

--- a/Uses/uses.html
+++ b/Uses/uses.html
@@ -74,7 +74,7 @@
                     <button class="choice" onclick="selectAnswer(1)">Choice 2</button>
                     <button class="choice" onclick="selectAnswer(2)">Choice 3</button>
                 </div>
-                <p id="feedback" class="feedback"></p>
+                <p id="feedback" class="feedback" style="display: none;"></p>
             </div>
         </div>
     </main>
