added final syntax images

--- a/Syntax/syntax.html
+++ b/Syntax/syntax.html
@@ -62,10 +62,11 @@
             </aside>
             <main>
               <h2>Syntax</h2>
-              <p id="introText">Below is a list of common syntax you will need in Python when writing programs. It is reccomended to learn these so you can write code effciently and intuitively in Python.</p>
+              <p id="introText">Below is a list of common syntax you will need in Python when writing programs. It is recommended to learn these so you can write code effciently and intuitively in Python.</p>
         <div class="wrapper_inner_container">
           <div class="wrapper_inner">
-              <p>Syntax: print("Hello World!")</p>
+              <p>Syntax: </p>
+              <img src="../Syntax/world.png" alt="hello world example">
               <p>Definition: This syntax shows how you print text to the environment  </p>
           </div>
           <br>
@@ -85,21 +86,21 @@
           <br>
 
           <div class="wrapper_inner">
-              list/array/tuple etc
+            <img src="../Syntax/datasets.png" alt="types of data sets example">
+            <p>Definition: Arrays are technically not a data structure in Pyhton, but can only hold one data type. Lists allow duplicate items, multiple data types, and can be changed after creation (mutable). Tuples do not allow duplicates, but do allow different data types. Immutable (can't be changed after definition). Dictionaries are seperated with key:value pairs, where the key is how you reference the value. Mutable, but no duplicates.</p>
           </div>
           <br>
 
           <div class="wrapper_inner">
-              arithmetic (*//%)
+            <img src="../Syntax/arithmetic.png" alt="arithmetic example">
+            <p>Definition: This code snippet shows the expected outputs from each of these calculations, demonstrating the syntax needed to complete these sums.</p>
           </div>
           <br>
 
+         
           <div class="wrapper_inner">
-              indentation
-          </div>
-          <br>
-          <div class="wrapper_inner">
-              libraries
+            <img src="../Syntax/libraries.png" alt="random library example">
+            <p>Definition: Libraries add additional functionality to Python prgrams, removing the need to program this independently every time you need it. There are many different libraries, follow <a href="https://docs.python.org/3/library/index.html" target="blank">this link</a> to find out more!</p>
           </div>
         </div>
         
