--- a/Basics/basics.html
+++ b/Basics/basics.html
@@ -102,7 +102,7 @@
             <img id="syntaxImg" src="../Basics/syntaxImg.PNG" alt="syntax">
             <div id="smallImg">
               <p>Can't see the image?</p>
-              <a href="../Basics/syntaxImg.PNG" target="_blank">Click here!</a>
+              <a href="../Basics/syntaxImg.PNG" target="_blank" alt="An image showing a Pyhton environment with examples of sequence, selection, and iteration">Click here!</a>
             </div>
             <img></img>
             <img></img>
