--- a/About/about.html
+++ b/About/about.html
@@ -74,7 +74,7 @@
               It also contains useful links to resources students will find useful when troubleshooting and testing their code. It will also bring them to a higher standard than this website is capable of.
             </p>
             <p>
-              There is a built in quiz for learners to test their knowledge, as well as a brieSf history of Python and the key syntax they will need when writing programs.
+              There is a built in quiz for learners to test their knowledge, as well as a brief history of Python and the key syntax they will need when writing programs.
             </p>
             <br>
             <p>Have any queries, suggestions, or complaints?</p>
