--- a/Syntax/syntax.html
+++ b/Syntax/syntax.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html>
-<head lang="en">
+<html lang="en">
+<head>
     <meta charset="UTF-8">
     <meta name="description" content="Coding for the Web - Python">
     <meta name="keywords" content="Python, Coding, Programming, Web Development">
