--- a/Syntax/syntax.html
+++ b/Syntax/syntax.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head lang="en">
     <meta charset="UTF-8">
     <meta name="description" content="Coding for the Web - Python">
     <meta name="keywords" content="Python, Coding, Programming, Web Development">
