--- a/Syntax/syntax.html
+++ b/Syntax/syntax.html
@@ -47,6 +47,7 @@
         <li><a href="../Syntax/syntax.html">Syntax</a></li>
         <li><a href="../History/history.html">History</a></li>
         <li><a href="../About/about.html">About</a></li>
+        <li><a href="../Interpreter/interpreter.html">Interpreter</a></li>
         <li><label id="close" for="menu-toggle" class="close-menu">Close</label></li>
       </ul>
 
@@ -64,6 +65,7 @@
             <a href="../Syntax/syntax.html">Syntax</a>
             <a href="../History/history.html">History</a>
             <a href="../About/about.html">About</a>
+            <a href="../Interpreter/interpreter.html">Interpreter</a>
         </nav>
             </aside>
             <main>
@@ -124,6 +126,7 @@
         <a href="../Basics/basics.html">Basics</a>
         <a href="../Resources/resources.html">Resources</a>
         <a href="../Uses/uses.html">Quiz</a>
+        <a href="../Interpreter/interpreter.html">Interpreter</a>
       </div>
       <div id="footer-logo">
         <img src="../logo.png" alt="logo">
