added contact button to all pages and footer +

--- a/Basics/basics.html
+++ b/Basics/basics.html
@@ -17,6 +17,7 @@
     <body>
       
     <header>
+      <button id="contact" onclick="contactPage()">Contact Us</button>
       <img id="header-logo" src="../logo.png" alt="logoEKC">
       <h1>Basics</h1>
       
@@ -147,6 +148,7 @@
     <a href="../History/history.html">History</a>
     <a href="../About/about.html">About</a>
     <a href="../T&Cs/terms.html">Terms and Conditions</a>
+    <a href="../Contact/contact.html">Contact</a>
   </div>
   
   
