--- a/Contact/contact.html
+++ b/Contact/contact.html
@@ -15,6 +15,7 @@
 
 <body>
   <header>
+    <button id="contact" onclick="contactPage()">Contact Us</button>
     <img id="header-logo" src="../logo.png" alt="logoEKC">
       <h1>Contact</h1>
   </header>
@@ -111,6 +112,7 @@
       <a href="../History/history.html">History</a>
       <a href="../About/about.html">About</a>
       <a href="../T&Cs/terms.html">Terms and Conditions</a>
+      <a href="../Contact/contact.html">Contact</a>
     </div>
     </div> 
     
