--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
         <a href="../History/history.html">History</a>
         <a href="../About/about.html">About</a>
         <a href="../T&Cs/terms.html">Terms and Conditions</a>
+        <a href="../Contact/contact.html">Contact</a>
       </div>
       </div> 
       
