--- a/T&Cs/terms.html
+++ b/T&Cs/terms.html
@@ -37,7 +37,7 @@
         <li><a href="../index.html">Home</a></li>
         <li><a href="../Basics/basics.html">Basics</a></li>
         <li><a href="../Resources/resources.html">Resources</a></li>
-        <li><a href="../Uses/uses.html">Uses</a></li>
+        <li><a href="../Uses/uses.html">Quiz</a></li>
         <li><a href="../Syntax/syntax.html">Syntax</a></li>
         <li><a href="../History/history.html">History</a></li>
         <li><a href="../About/about.html">About</a></li>
